// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analiseDeCenarios e resultadoDoCenario — congelados > a análise dos cenários está congelada 1`] = `
[
  {
    "alavancas": {},
    "bdiPct": 0,
    "bdiValor": 0,
    "custo": 9168.33,
    "deltaLucro": 0,
    "key": "conservador",
    "lucro": 0,
    "margemPct": 0,
    "nome": "Conservador",
    "preco": 9168.33,
    "precoPorKg": 0,
  },
  {
    "alavancas": {},
    "bdiPct": 0,
    "bdiValor": 0,
    "custo": 9168.33,
    "deltaLucro": 0,
    "key": "base",
    "lucro": 0,
    "margemPct": 0,
    "nome": "Base",
    "preco": 9168.33,
    "precoPorKg": 0,
  },
  {
    "alavancas": {},
    "bdiPct": 0,
    "bdiValor": 0,
    "custo": 9168.33,
    "deltaLucro": 0,
    "key": "otimista",
    "lucro": 0,
    "margemPct": 0,
    "nome": "Otimista",
    "preco": 9168.33,
    "precoPorKg": 0,
  },
]
`;

exports[`calcularLqc — bordas que não podem virar NaN > estudo vazio devolve zeros, nunca NaN 1`] = `
{
  "areaM2": 0,
  "bdiCampos": {},
  "bdiPct": 0,
  "bdiValor": 0,
  "cargas": {
    "linhas": [],
    "pesoTotal": 0,
    "totalCargas": 0,
  },
  "creditoIcms": {
    "aliquotaPct": 12,
    "linhas": [
      {
        "aliquotaPct": 12,
        "base": 0,
        "key": "materiaPrima",
        "nome": "Matéria-prima (aço)",
        "valor": 0,
      },
      {
        "aliquotaPct": 12,
        "base": 0,
        "key": "fixadores",
        "nome": "Fixadores (parafusos, chumbadores)",
        "valor": 0,
      },
      {
        "aliquotaPct": 12,
        "base": 0,
        "key": "tintas",
        "nome": "Tintas e diluentes",
        "valor": 0,
      },
      {
        "aliquotaPct": 12,
        "base": 0,
        "key": "comerciais",
        "nome": "Acessórios e itens comerciais",
        "valor": 0,
      },
      {
        "aliquotaPct": 12,
        "base": 0,
        "key": "frete",
        "nome": "Transporte",
        "valor": 0,
      },
    ],
    "semCredito": [],
    "total": 0,
  },
  "custo": 0,
  "custoDireto": 0,
  "custoTorg": 0,
  "custosExternos": 0,
  "debitoImpostos": 0,
  "demaos": 1,
  "ensaios": {
    "linhas": [
      {
        "ativo": false,
        "base": "m2",
        "cada": 200,
        "custo": 0,
        "custoUnit": 0,
        "key": "PULL_OFF",
        "nome": "Aderência (pull-off)",
        "norma": "ABNT NBR 15877 / ASTM D4541",
        "qtd": 0,
        "total": 0,
        "universo": 0,
      },
      {
        "ativo": false,
        "base": "m2",
        "cada": 500,
        "custo": 0,
        "custoUnit": 0,
        "key": "SALINIDADE",
        "nome": "Sais solúveis (Bresle)",
        "norma": "ISO 8502-6 / 8502-9",
        "qtd": 0,
        "total": 0,
        "universo": 0,
      },
      {
        "ativo": false,
        "base": "kg",
        "cada": 5000,
        "custo": 0,
        "custoUnit": 0,
        "key": "ULTRASSOM",
        "nome": "Ultrassom em solda",
        "norma": "AWS D1.1 / PETROBRAS N-1738",
        "qtd": 0,
        "total": 0,
        "universo": 0,
      },
      {
        "ativo": false,
        "base": "kg",
        "cada": 5000,
        "custo": 0,
        "custoUnit": 0,
        "key": "DIMENSIONAL_N1",
        "nome": "Dimensional N1",
        "norma": "ABNT NBR 8800 / PO Torg",
        "qtd": 0,
        "total": 0,
        "universo": 0,
      },
      {
        "ativo": false,
        "base": "kg",
        "cada": 2000,
        "custo": 0,
        "custoUnit": 0,
        "key": "VISUAL_SOLDA_N1",
        "nome": "Visual de solda N1",
        "norma": "AWS D1.1",
        "qtd": 0,
        "total": 0,
        "universo": 0,
      },
    ],
    "porKg": 0,
    "total": 0,
  },
  "escopo": {
    "pesoFora": 0,
    "selecionadas": 0,
    "total": 0,
  },
  "frete": {
    "apresentacao": "diluido",
    "capacidadeKg": 27000,
    "dataOrcamento": null,
    "destino": null,
    "difOrcado": null,
    "escopoFixo": false,
    "faturamento": "TORG",
    "fonte": "TABELA",
    "fracaoEscopo": 1,
    "modo": "kg",
    "orcado": null,
    "origem": null,
    "porKg": 0,
    "total": 0,
    "transportadora": null,
    "valorCheio": null,
    "viagens": 0,
  },
  "grupos": {
    "fabricacao": {
      "linhas": [
        {
          "espec": "0 a 10 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Leve",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 5.5,
          "subtotal": 0,
        },
        {
          "espec": "10 a 25 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Leve",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 3.67,
          "subtotal": 0,
        },
        {
          "espec": "25 a 60 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Médio",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 3.14,
          "subtotal": 0,
        },
        {
          "espec": "60 a 120 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 2.75,
          "subtotal": 0,
        },
        {
          "espec": "> 120 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 2.44,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 0,
        "pesoKg": 0,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "fixadores": {
      "linhas": [
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Parafusos A325 e A307",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 0,
        "pesoKg": 0,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "materiaPrima": {
      "linhas": [
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "U / Ue dobrado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Perfil soldado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 10.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "U laminado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 8,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Ferro chato",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 6.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Barra quadrada",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7.2,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Barra roscada",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 18,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Chapa lisa",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 6.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Chapa expandida",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 10.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Chapa xadrez",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Ferro redondo",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 6.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "W laminado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7.6,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "L laminado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 6.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": null,
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Tubo",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7.3,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 0,
        "pesoKg": 0,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "pintura": {
      "linhas": [
        {
          "espec": "1 demão",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Leve",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 1.38,
          "subtotal": 0,
        },
        {
          "espec": "1 demão",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Leve",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0.92,
          "subtotal": 0,
        },
        {
          "espec": "1 demão",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Médio",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0.79,
          "subtotal": 0,
        },
        {
          "espec": "1 demão",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0.69,
          "subtotal": 0,
        },
        {
          "espec": "1 demão",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0.61,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 0,
        "pesoKg": 0,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "preMontagem": {
      "linhas": [
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Leve",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Leve",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Médio",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 0,
        "pesoKg": 0,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "terceirizados": {
      "linhas": [],
      "total": {
        "icms": 0,
        "pesoKg": 0,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "tintas": {
      "linhas": [],
      "total": {
        "icms": 0,
        "pesoKg": 0,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
  },
  "impostos": [
    {
      "base": 0,
      "cargaPct": 24.22,
      "cfop": "6101",
      "key": "ITENS_COMERCIAIS",
      "nome": "Itens comerciais",
      "padrao": "6101",
      "valor": 0,
    },
    {
      "base": 0,
      "cargaPct": 24.22,
      "cfop": "6101",
      "key": "MATERIAL_IND",
      "nome": "Matéria-prima e insumos",
      "padrao": "6101",
      "valor": 0,
    },
    {
      "base": 0,
      "cargaPct": 18.33,
      "cfop": "702",
      "key": "PROJETO",
      "nome": "Projeto — 5% do faturamento Torg",
      "padrao": "702",
      "valor": 0,
    },
    {
      "base": 0,
      "cargaPct": 14.96,
      "cfop": "5125",
      "key": "INDUSTRIALIZACAO",
      "nome": "Industrialização",
      "padrao": "5125",
      "valor": 0,
    },
    {
      "base": 0,
      "cargaPct": 18.33,
      "cfop": "702",
      "key": "MONTAGEM",
      "nome": "Montagem",
      "padrao": "702",
      "valor": 0,
    },
    {
      "base": 0,
      "cargaPct": 24.22,
      "cfop": "6101",
      "key": "EQUIPAMENTOS",
      "nome": "Equipamentos",
      "padrao": "6101",
      "valor": 0,
    },
  ],
  "pesoPorClasse": {},
  "pesoPorPerfil": {},
  "pesoTotal": 0,
  "pinturaPorArea": [],
  "porArea": [],
  "preMont": {
    "apresentacao": "diluido",
    "areas": [],
    "pctDaObra": 0,
    "pesoKg": 0,
    "porArea": false,
    "porKg": 0,
    "total": 0,
  },
  "preMontagemPct": 0,
  "preco": 0,
  "precoPorKg": 0,
  "splitFaturamento": {
    "baseDaVenda": 0,
    "cargaBrutaPct": 0,
    "cargaEfetivaPct": 0,
    "fecha": true,
    "projetoHerdado": true,
    "projetoPct": 5,
    "vendaTorg": 0,
  },
  "totais": {
    "comerciais": 0,
    "ensaios": 0,
    "industrializacao": {
      "icms": 0,
      "pesoKg": 0,
      "pisCofins": 0,
      "subtotal": 0,
    },
    "material": {
      "icms": 0,
      "pesoKg": 0,
      "pisCofins": 0,
      "subtotal": 0,
    },
    "mdo": {
      "icms": 0,
      "pesoKg": 0,
      "pisCofins": 0,
      "subtotal": 0,
    },
  },
  "totalImpostos": 0,
}
`;

exports[`calcularLqc — snapshot do estudo de referência > o resultado inteiro está congelado 1`] = `
{
  "areaM2": 193,
  "bdiCampos": {},
  "bdiPct": 0,
  "bdiValor": 0,
  "cargas": {
    "linhas": [
      {
        "capacidadeKg": 8000,
        "cargas": 1,
        "faixa": "10 a 25 kg/m",
        "key": "LEVE",
        "nome": "Leve",
        "pesoKg": 1000,
        "ultimaCargaKg": 1000,
      },
    ],
    "pesoTotal": 1000,
    "totalCargas": 1,
  },
  "creditoIcms": {
    "aliquotaPct": 12,
    "linhas": [
      {
        "aliquotaPct": 12,
        "base": 0,
        "key": "materiaPrima",
        "nome": "Matéria-prima (aço)",
        "valor": 0,
      },
      {
        "aliquotaPct": 12,
        "base": 0,
        "key": "fixadores",
        "nome": "Fixadores (parafusos, chumbadores)",
        "valor": 0,
      },
      {
        "aliquotaPct": 12,
        "base": 4118.33,
        "key": "tintas",
        "nome": "Tintas e diluentes",
        "valor": 494.2,
      },
      {
        "aliquotaPct": 12,
        "base": 0,
        "key": "comerciais",
        "nome": "Acessórios e itens comerciais",
        "valor": 0,
      },
      {
        "aliquotaPct": 12,
        "base": 0,
        "key": "frete",
        "nome": "Transporte",
        "valor": 0,
      },
    ],
    "semCredito": [],
    "total": 494.2,
  },
  "custo": 9168.33,
  "custoDireto": 0,
  "custoTorg": 9168.33,
  "custosExternos": 4118.33,
  "debitoImpostos": 1768.55,
  "demaos": 2,
  "ensaios": {
    "linhas": [
      {
        "ativo": false,
        "base": "m2",
        "cada": 200,
        "custo": 0,
        "custoUnit": 0,
        "key": "PULL_OFF",
        "nome": "Aderência (pull-off)",
        "norma": "ABNT NBR 15877 / ASTM D4541",
        "qtd": 0,
        "total": 0,
        "universo": 193,
      },
      {
        "ativo": false,
        "base": "m2",
        "cada": 500,
        "custo": 0,
        "custoUnit": 0,
        "key": "SALINIDADE",
        "nome": "Sais solúveis (Bresle)",
        "norma": "ISO 8502-6 / 8502-9",
        "qtd": 0,
        "total": 0,
        "universo": 193,
      },
      {
        "ativo": false,
        "base": "kg",
        "cada": 5000,
        "custo": 0,
        "custoUnit": 0,
        "key": "ULTRASSOM",
        "nome": "Ultrassom em solda",
        "norma": "AWS D1.1 / PETROBRAS N-1738",
        "qtd": 0,
        "total": 0,
        "universo": 6000,
      },
      {
        "ativo": false,
        "base": "kg",
        "cada": 5000,
        "custo": 0,
        "custoUnit": 0,
        "key": "DIMENSIONAL_N1",
        "nome": "Dimensional N1",
        "norma": "ABNT NBR 8800 / PO Torg",
        "qtd": 0,
        "total": 0,
        "universo": 6000,
      },
      {
        "ativo": false,
        "base": "kg",
        "cada": 2000,
        "custo": 0,
        "custoUnit": 0,
        "key": "VISUAL_SOLDA_N1",
        "nome": "Visual de solda N1",
        "norma": "AWS D1.1",
        "qtd": 0,
        "total": 0,
        "universo": 6000,
      },
    ],
    "porKg": 0,
    "total": 0,
  },
  "escopo": {
    "pesoFora": 4000,
    "selecionadas": 2,
    "total": 3,
  },
  "frete": {
    "apresentacao": "diluido",
    "capacidadeKg": 27000,
    "dataOrcamento": null,
    "destino": null,
    "difOrcado": null,
    "escopoFixo": false,
    "faturamento": "TORG",
    "fonte": "TABELA",
    "fracaoEscopo": 0.6,
    "modo": "kg",
    "orcado": null,
    "origem": null,
    "porKg": 0,
    "total": 0,
    "transportadora": null,
    "valorCheio": null,
    "viagens": 0,
  },
  "grupos": {
    "fabricacao": {
      "linhas": [
        {
          "espec": "0 a 10 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Leve",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 5.5,
          "subtotal": 0,
        },
        {
          "espec": "10 a 25 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 440.4,
          "icmsPct": 0.12,
          "nome": "Leve",
          "pesoKg": 1000,
          "pisCofins": 339.48,
          "pisCofinsPct": 0.0925,
          "precoKg": 3.67,
          "subtotal": 3670,
        },
        {
          "espec": "25 a 60 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Médio",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 3.14,
          "subtotal": 0,
        },
        {
          "espec": "60 a 120 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 2.75,
          "subtotal": 0,
        },
        {
          "espec": "> 120 kg/m",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 2.44,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 440.4,
        "pesoKg": 1000,
        "pisCofins": 339.48,
        "subtotal": 3670,
      },
    },
    "fixadores": {
      "linhas": [
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Parafusos A325 e A307",
          "pesoKg": 6000,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 0,
        "pesoKg": 6000,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "materiaPrima": {
      "linhas": [
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "U / Ue dobrado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Perfil soldado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 10.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "U laminado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 8,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Ferro chato",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 6.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Barra quadrada",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7.2,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Barra roscada",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 18,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Chapa lisa",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 6.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Chapa expandida",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 10.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Chapa xadrez",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Ferro redondo",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 6.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "W laminado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7.6,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "L laminado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 6.5,
          "subtotal": 0,
        },
        {
          "espec": null,
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Tubo",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 7.3,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 0,
        "pesoKg": 0,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "pintura": {
      "linhas": [
        {
          "espec": "2 demãos",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Leve",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 2.06,
          "subtotal": 0,
        },
        {
          "espec": "2 demãos",
          "faturamentoEscolhido": "TORG",
          "icms": 165.6,
          "icmsPct": 0.12,
          "nome": "Leve",
          "pesoKg": 1000,
          "pisCofins": 127.65,
          "pisCofinsPct": 0.0925,
          "precoKg": 1.38,
          "subtotal": 1380,
        },
        {
          "espec": "2 demãos",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Médio",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 1.18,
          "subtotal": 0,
        },
        {
          "espec": "2 demãos",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 1.03,
          "subtotal": 0,
        },
        {
          "espec": "2 demãos",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0.92,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 165.6,
        "pesoKg": 1000,
        "pisCofins": 127.65,
        "subtotal": 1380,
      },
    },
    "preMontagem": {
      "linhas": [
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Leve",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Leve",
          "pesoKg": 1000,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Médio",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
        {
          "espec": "N/A",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.12,
          "nome": "Extra Pesado",
          "pesoKg": 0,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 0,
        "pesoKg": 1000,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "terceirizados": {
      "linhas": [],
      "total": {
        "icms": 0,
        "pesoKg": 0,
        "pisCofins": 0,
        "subtotal": 0,
      },
    },
    "tintas": {
      "linhas": [
        {
          "areaM2": 160,
          "camadas": [
            {
              "areaM2": 160,
              "camada": "PRIMER",
              "diluente": 145.45,
              "litros": 48.48,
              "litrosDiluente": 12.12,
              "peliculaSeca": 100,
              "perda": 45,
              "pratico": 3.3,
              "precoDiluente": 12,
              "precoLitro": 42,
              "solidos": 60,
              "teorico": 6,
              "tinta": 2036.36,
              "total": 2181.82,
            },
            {
              "areaM2": 160,
              "camada": "ACABAMENTO",
              "diluente": 95.24,
              "litros": 31.75,
              "litrosDiluente": 7.94,
              "peliculaSeca": 60,
              "perda": 45,
              "pratico": 5.04,
              "precoDiluente": 12,
              "precoLitro": 58,
              "solidos": 55,
              "teorico": 9.17,
              "tinta": 1841.27,
              "total": 1936.51,
            },
          ],
          "espec": "perda 45%",
          "faturamentoEscolhido": "TORG",
          "icms": 741.3,
          "icmsPct": 0.18,
          "litros": 80.23,
          "nome": "Estrutura em geral",
          "perda": 45,
          "pesoKg": 5000,
          "pisCofins": 380.95,
          "pisCofinsPct": 0.0925,
          "precoKg": 0.823666,
          "subtotal": 4118.33,
        },
        {
          "areaM2": 33,
          "camadas": [],
          "espec": "perda 85%",
          "faturamentoEscolhido": "TORG",
          "icms": 0,
          "icmsPct": 0.18,
          "litros": 0,
          "nome": "Guarda-corpo e escada marinheiro",
          "perda": 85,
          "pesoKg": 1000,
          "pisCofins": 0,
          "pisCofinsPct": 0.0925,
          "precoKg": 0,
          "subtotal": 0,
        },
      ],
      "total": {
        "icms": 741.3,
        "pesoKg": 6000,
        "pisCofins": 380.95,
        "subtotal": 4118.33,
      },
    },
  },
  "impostos": [
    {
      "base": 0,
      "cargaPct": 24.22,
      "cfop": "6101",
      "key": "ITENS_COMERCIAIS",
      "nome": "Itens comerciais",
      "padrao": "6101",
      "valor": 0,
    },
    {
      "base": 4118.33,
      "cargaPct": 24.22,
      "cfop": "6101",
      "key": "MATERIAL_IND",
      "nome": "Matéria-prima e insumos",
      "padrao": "6101",
      "valor": 997.46,
    },
    {
      "base": 458.42,
      "cargaPct": 18.33,
      "cfop": "702",
      "key": "PROJETO",
      "nome": "Projeto — 5% do faturamento Torg",
      "padrao": "702",
      "valor": 84.03,
    },
    {
      "base": 4591.58,
      "cargaPct": 14.96,
      "cfop": "5125",
      "key": "INDUSTRIALIZACAO",
      "nome": "Industrialização",
      "padrao": "5125",
      "valor": 687.06,
    },
    {
      "base": 0,
      "cargaPct": 18.33,
      "cfop": "702",
      "key": "MONTAGEM",
      "nome": "Montagem",
      "padrao": "702",
      "valor": 0,
    },
    {
      "base": 0,
      "cargaPct": 24.22,
      "cfop": "6101",
      "key": "EQUIPAMENTOS",
      "nome": "Equipamentos",
      "padrao": "6101",
      "valor": 0,
    },
  ],
  "pesoPorClasse": {
    "LEVE": 1000,
    "MEDIO": 5000,
  },
  "pesoPorPerfil": {
    "TUBO": 1000,
    "W": 5000,
  },
  "pesoTotal": 6000,
  "pinturaPorArea": [
    {
      "area": "—",
      "areaM2": 160,
      "camadas": [
        {
          "camada": "PRIMER",
          "cor": null,
          "custo": 2181.82,
          "litros": 48.48,
          "litrosDiluente": 12.12,
          "peliculaSeca": 100,
          "produto": null,
          "rendimento": 3.3,
          "solidos": 60,
        },
        {
          "camada": "ACABAMENTO",
          "cor": null,
          "custo": 1936.51,
          "litros": 31.75,
          "litrosDiluente": 7.94,
          "peliculaSeca": 60,
          "produto": null,
          "rendimento": 5.04,
          "solidos": 55,
        },
      ],
      "cor": null,
      "custo": 4118.33,
      "litros": 80.23,
      "litrosDiluente": 20.06,
      "peliculaTotal": 160,
      "perda": 45,
      "pesoKg": 5000,
    },
    {
      "area": "—",
      "areaM2": 33,
      "camadas": [],
      "cor": null,
      "custo": 0,
      "litros": 0,
      "litrosDiluente": 0,
      "peliculaTotal": 0,
      "perda": 85,
      "pesoKg": 1000,
    },
  ],
  "porArea": [
    {
      "aco": 0,
      "area": "—",
      "ativo": true,
      "classificacao": "MEDIO",
      "cor": null,
      "custo": 20170,
      "custoPorKg": 2.02,
      "fabricacao": 14670,
      "industrializacao": 20170,
      "material": 0,
      "pesoKg": 10000,
      "pintura": 5500,
      "preMont": 0,
      "preco": 20170,
      "precoPorKg": 2.02,
      "terceiros": 0,
    },
  ],
  "preMont": {
    "apresentacao": "diluido",
    "areas": [],
    "pctDaObra": 0,
    "pesoKg": 0,
    "porArea": false,
    "porKg": 0,
    "total": 0,
  },
  "preMontagemPct": 0,
  "preco": 9168.33,
  "precoPorKg": 1.53,
  "splitFaturamento": {
    "baseDaVenda": 9168.33,
    "cargaBrutaPct": 19.29,
    "cargaEfetivaPct": 13.9,
    "fecha": true,
    "projetoHerdado": true,
    "projetoPct": 5,
    "vendaTorg": 9168.33,
  },
  "totais": {
    "comerciais": 0,
    "ensaios": 0,
    "industrializacao": {
      "icms": 606,
      "pesoKg": 3000,
      "pisCofins": 467.13,
      "subtotal": 5050,
    },
    "material": {
      "icms": 741.3,
      "pesoKg": 12000,
      "pisCofins": 380.95,
      "subtotal": 4118.33,
    },
    "mdo": {
      "icms": 0,
      "pesoKg": 0,
      "pisCofins": 0,
      "subtotal": 0,
    },
  },
  "totalImpostos": 1274.35,
}
`;

exports[`fluxoDeCaixa — congelado > o fluxo de um estudo simples está congelado 1`] = `
{
  "capitalDeGiro": -0,
  "compra": {
    "inicio": 1,
    "meses": 1,
    "parcelas": [
      {
        "dias": 30,
        "mes": 1,
      },
    ],
  },
  "custoFinanceiro": 0,
  "diferenca": 0,
  "diferencaFaturamento": 0,
  "eventosDesconhecidos": [],
  "faturado": 9168.33,
  "fluxo": [
    {
      "de": {
        "entrada": 916.83,
        "entrega": 0,
        "medicao": 0,
        "projeto": 0,
      },
      "emAberto": 0,
      "entrada": 916.83,
      "fabrica": 0,
      "fase": "assinatura",
      "impostos": 0,
      "juros": 0,
      "kgMedido": 0,
      "kgProduzido": 0,
      "material": 0,
      "mes": 0,
      "projeto": 0,
      "saida": 0,
      "saldo": 916.83,
    },
    {
      "de": {
        "entrada": 0,
        "entrega": 0,
        "medicao": 0,
        "projeto": 0,
      },
      "emAberto": 0,
      "entrada": 0,
      "fabrica": 0,
      "fase": "fabricação",
      "impostos": 0,
      "juros": 0,
      "kgMedido": 0,
      "kgProduzido": 0,
      "material": 0,
      "mes": 1,
      "projeto": 0,
      "saida": 0,
      "saldo": 916.83,
    },
    {
      "de": {
        "entrada": 0,
        "entrega": 916.83,
        "medicao": 7334.66,
        "projeto": 0,
      },
      "emAberto": 0,
      "entrada": 8251.5,
      "fabrica": 0,
      "fase": "pós-entrega",
      "impostos": 0,
      "juros": 0,
      "kgMedido": 0,
      "kgProduzido": 0,
      "material": 0,
      "mes": 2,
      "projeto": 0,
      "saida": 0,
      "saldo": 9168.33,
    },
    {
      "de": {
        "entrada": 0,
        "entrega": 0,
        "medicao": 0,
        "projeto": 0,
      },
      "emAberto": 0,
      "entrada": 0,
      "fabrica": 0,
      "fase": "pós-entrega",
      "impostos": 0,
      "juros": 0,
      "kgMedido": 0,
      "kgProduzido": 0,
      "material": 0,
      "mes": 3,
      "projeto": 0,
      "saida": 0,
      "saldo": 9168.33,
    },
  ],
  "medicao": {
    "abertoNaEntrega": 0,
    "foraDaMedicao": 1833.67,
    "kgExcedente": 0,
    "kgFaltando": 0,
    "kgInformado": 0,
    "pesoKg": 0,
    "porKgDigitado": false,
    "precoPorKg": 0,
    "saldoAFaturar": 7334.66,
  },
  "mesDoPico": 0,
  "mesEntrega": 1,
  "mesInicioFabricacao": 1,
  "meses": 1,
  "mesesAjustados": [],
  "mesesFabricacao": 1,
  "mesesProjeto": 0,
  "mesesQueMedem": [
    1,
  ],
  "mesesSobrepostos": 0,
  "pagamento": {
    "adiantadoPct": 10,
    "fecha": true,
    "parcelas": [
      {
        "dias": 0,
        "evento": "ASSINATURA",
        "nome": "Entrada",
        "pct": 10,
      },
      {
        "dias": 30,
        "evento": "MEDICAO",
        "nome": "Medições mensais",
        "pct": 80,
      },
      {
        "dias": 30,
        "evento": "ENTREGA",
        "nome": "Entrega",
        "pct": 10,
      },
    ],
    "retidoPct": 0,
    "soma": 100,
  },
  "receitaDigitada": false,
  "receitaForaDoPrazo": 0,
  "reservadoNoBdi": 0,
  "resultadoFinal": 9168.33,
  "totais": {
    "fabrica": 0,
    "impostos": 0,
    "material": 0,
    "projeto": 0,
  },
}
`;
